--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -37,11 +37,11 @@
       "execution_count": 2,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
-        "id": "502e1d87-2fdd-4588-a330-2af21268215e",
-        "outputId": "6ee62985-240d-4a65-a5b7-9dd1f4add7dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "502e1d87-2fdd-4588-a330-2af21268215e",
+        "outputId": "6ee62985-240d-4a65-a5b7-9dd1f4add7dc"
       },
       "outputs": [
         {
@@ -66,11 +66,11 @@
       "execution_count": 3,
       "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
       "metadata": {
-        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
-        "outputId": "daad8c88-d6a0-4116-85ca-516064070077",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
+        "outputId": "daad8c88-d6a0-4116-85ca-516064070077"
       },
       "outputs": [
         {
@@ -96,7 +96,23 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.).\n"
+        "# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.).\n",
+        "x=5\n",
+        "name=\"varsha\"\n",
+        "temperature=6.2\n",
+        "subjects=[\"maths\",\"english\",\"science\",\"social\"]\n",
+        "marks={\n",
+        "    \"maths\":25,\n",
+        "    \"english\":30,\n",
+        "    \"science\":35,\n",
+        "    \"social\":40,\n",
+        "}\n",
+        "print(type(x))\n",
+        "print(type(name))\n",
+        "print(type(temperature))\n",
+        "print(type(subjects))\n",
+        "print(type(marks))\n",
+        "\n"
       ]
     },
     {
