--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -89,12 +89,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
       "metadata": {
-        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
+        "outputId": "fdc2e00b-d57d-488d-bb5e-6864e051c362"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n",
+            "<class 'str'>\n",
+            "<class 'float'>\n",
+            "<class 'list'>\n",
+            "<class 'dict'>\n"
+          ]
+        }
+      ],
       "source": [
         "# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.).\n",
         "x=5\n",
@@ -117,74 +133,180 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
       "metadata": {
-        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
+        "outputId": "b2b96dd0-123a-4813-b098-d23838969b37"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "value of x=5\n",
+            "value of y=2\n",
+            "Addition 7\n",
+            "Subtrationtion 3\n",
+            "Multiplication 10\n",
+            "Division= 2.5\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)"
+        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)\n",
+        "x=int(input(\"value of x=\"))\n",
+        "y=int(input(\"value of y=\"))\n",
+        "print(\"Addition\",x+y)\n",
+        "print(\"Subtrationtion\",x-y)\n",
+        "print(\"Multiplication\",x*y)\n",
+        "print(\"Division=\",x/y)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "629435bd-6bfa-44de-91d9-3b2937713257",
       "metadata": {
-        "id": "629435bd-6bfa-44de-91d9-3b2937713257"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "629435bd-6bfa-44de-91d9-3b2937713257",
+        "outputId": "3d82b7f9-a14e-417a-f2dd-771070b411f2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "123 = <class 'int'>\n",
+            "123.0 = <class 'float'>\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results."
+        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results.\n",
+        "string=\"123\"\n",
+        "integer=int(string)\n",
+        "float_var=float(string)\n",
+        "print(string,\"=\",type(integer))\n",
+        "print(float_var,\"=\",type(float_var))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
       "metadata": {
-        "id": "599421f1-51c1-4653-9d78-b007fcc6861b"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
+        "outputId": "687d26ef-6301-4edc-9ce0-047dff350306"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter input:varsha\n",
+            "v\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print the first character of a given string. (User input for the string)"
+        "# Write a Python program to print the first character of a given string. (User input for the string)\n",
+        "string=input(\"Enter input:\")\n",
+        "print(\"First character\",string[0])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
       "metadata": {
-        "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
+        "outputId": "da8077ae-8ec9-4a32-af56-7d46a52a812b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter input:varsha\n",
+            "length= 6\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print the length of a string. (User input for the string)"
+        "# Write a Python program to print the length of a string. (User input for the string)\n",
+        "string=input(\"Enter input:\")\n",
+        "print(\"length=\", len(string))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
       "metadata": {
-        "id": "65f44c33-618e-4337-a9d1-9de888c93a0a"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
+        "outputId": "bd492efe-1883-4cd3-d547-eb6b6cc3ad06"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter input:va12\n",
+            "The given string has other characters too.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to check if a given string contains only alphabets."
+        "# Write a Python program to check if a given string contains only alphabets.\n",
+        "string=input(\"Enter input:\")\n",
+        "if string.isalpha():\n",
+        "  print(\"Contains only alphabets\")\n",
+        "else:\n",
+        "  print(\"The given string has other characters too.\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
       "metadata": {
-        "id": "37463128-2b51-4860-b6bf-40d3c03fbe84"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
+        "outputId": "5e5f5a5a-b9aa-418a-92ad-5a2e08fbabcb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the string 1:var\n",
+            "Enter the string 2:sha\n",
+            "varsha\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to concatenate two strings. (User input for the strings)"
+        "# Write a Python program to concatenate two strings. (User input for the strings)\n",
+        "string1=input(\"Enter the string 1:\")\n",
+        "string2=input(\"Enter the string 2:\")\n",
+        "print(string1+string2)"
       ]
     },
     {
