--- a/Assignments/Assignment_01.ipynb
+++ b/Assignments/Assignment_01.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/varsha-69/V/blob/main/Assignment_01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/varsha-69/V/blob/main/Assignments/Assignment_01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -842,15 +842,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "0a3f894e-52ba-4c0b-9158-a70f31f4fd49",
       "metadata": {
-        "id": "0a3f894e-52ba-4c0b-9158-a70f31f4fd49"
+        "id": "0a3f894e-52ba-4c0b-9158-a70f31f4fd49",
+        "outputId": "257006f5-2267-4c07-96e5-8bb43be3205d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20 Less than 50\n",
+            "16 Less than 50\n",
+            "25 Less than 50\n",
+            "48 Less than 50\n",
+            "Breaks out of the loop since value greater than 50 was found\n"
+          ]
+        }
+      ],
       "source": [
         "# Write a Python program that breaks out of a loop when a specific condition is met (e.g., when a number greater than 50 is found).\n",
-        "for i in range(1,):"
+        "list_num=[20,16,25,48,69,50]\n",
+        "for i in list_num:\n",
+        "  if i>50:\n",
+        "    print(\"Breaks out of the loop since value greater than 50 was found\")\n",
+        "    break\n",
+        "  else:\n",
+        "    print(i,\"Less than 50\")\n"
       ]
     },
     {
@@ -890,14 +912,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "f8ffed70-dfde-4262-a2fd-0d35d69b5fb1",
       "metadata": {
-        "id": "f8ffed70-dfde-4262-a2fd-0d35d69b5fb1"
+        "id": "f8ffed70-dfde-4262-a2fd-0d35d69b5fb1",
+        "outputId": "a9c2bb42-a8d6-495a-fb5c-a514f798cde0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter input:varsha\n",
+            "Enter the character to be searched:v\n",
+            "v occurs 1 times\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to count how many times a particular character appears in a string using a for loop. (User input for string and character)\n"
+        "# Write a Python program to count how many times a particular character appears in a string using a for loop. (User input for string and character)\n",
+        "count=0\n",
+        "var=input(\"Enter input:\")\n",
+        "character=input(\"Enter the character to be searched:\")\n",
+        "for i in var:\n",
+        "    if i in character:\n",
+        "        count=count+1\n",
+        "print(character,\"occurs\",count,\"times\")"
       ]
     },
     {
@@ -939,26 +982,54 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "a0333c26-8e19-4c71-9722-d32cf8625ef6",
       "metadata": {
-        "id": "a0333c26-8e19-4c71-9722-d32cf8625ef6"
+        "id": "a0333c26-8e19-4c71-9722-d32cf8625ef6",
+        "outputId": "42c3428c-a414-4e9c-ef78-44bb8efe24ee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "55\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a list of integers and print the sum of the elements."
+        "# Write a Python program to create a list of integers and print the sum of the elements.\n",
+        "list_num=[1,2,3,4,5,6,7,8,9,10]\n",
+        "print(sum(list_num))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "5a23046d-80b0-4f8d-a02f-4e3d833c0443",
       "metadata": {
-        "id": "5a23046d-80b0-4f8d-a02f-4e3d833c0443"
+        "id": "5a23046d-80b0-4f8d-a02f-4e3d833c0443",
+        "outputId": "8c4039c3-7185-4db0-c8ee-97e052d2bbd5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find the largest element in a list."
+        "# Write a Python program to find the largest element in a list.\n",
+        "list_num=[1,2,3,4,5,6,7,8,9,10]\n",
+        "print(max(list_num))"
       ]
     },
     {
@@ -970,127 +1041,302 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to reverse a list."
+        "# Write a Python program to reverse a list.\n",
+        "list_num=[1,2,3,4,5,6,7,8,9,10]\n",
+        "print(list_num[::-1])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178",
       "metadata": {
-        "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178"
+        "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178",
+        "outputId": "c9835d08-f5ca-4be3-dcc8-d4bc9a2f1f5d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 6, 7, 8, 9, 10]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to remove all occurrences of a specific element from a list."
+        "# Write a Python program to remove all occurrences of a specific element from a list.\n",
+        "list_num=[1,2,3,4,5,6,7,8,9,10]\n",
+        "list_num.remove(5)\n",
+        "print(list_num)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
       "metadata": {
-        "id": "da9ba926-0ab5-46e9-b66d-128088c3225b"
+        "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
+        "outputId": "21c50964-2b94-4ea5-9b45-b3e9650f03cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find the index of an element in a list."
+        "# Write a Python program to find the index of an element in a list.\n",
+        "list_num=[1,2,3,4,5,6,7,8,9,10]\n",
+        "print(list_num.index(5))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "9601b6e4-cb90-4e1f-87b4-38ed37076e0d",
       "metadata": {
-        "id": "9601b6e4-cb90-4e1f-87b4-38ed37076e0d"
+        "id": "9601b6e4-cb90-4e1f-87b4-38ed37076e0d",
+        "outputId": "cc28fcb1-ef09-4a10-d010-8b07255fcaa5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Element doesn't exist in list\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find if a specific element exists in a list."
+        "# Write a Python program to find if a specific element exists in a list.\n",
+        "list_num=[1,2,3,4,5,6,7,8,9,10]\n",
+        "if 11 in list_num:\n",
+        "  print(\"Element exists in list\")\n",
+        "else:\n",
+        "  print(\"Element doesn't exist in list\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "9d8e7311-81de-4da2-826c-c4dcad28ed9f",
       "metadata": {
-        "id": "9d8e7311-81de-4da2-826c-c4dcad28ed9f"
+        "id": "9d8e7311-81de-4da2-826c-c4dcad28ed9f",
+        "outputId": "e4aa24cc-1c66-40ac-b0a0-caafca851067",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 10, 20, 5]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to remove duplicates from a list."
+        "# Write a Python program to remove duplicates from a list.\n",
+        "def Remove(duplicate):\n",
+        "    final_list = []\n",
+        "    for num in duplicate:\n",
+        "        if num not in final_list:\n",
+        "            final_list.append(num)\n",
+        "    return final_list\n",
+        "\n",
+        "duplicate = [2, 4, 10, 20, 5, 2, 20, 4]\n",
+        "print(Remove(duplicate))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "09e5121b-97b3-42e4-8025-f28f3470681b",
       "metadata": {
-        "id": "09e5121b-97b3-42e4-8025-f28f3470681b"
+        "id": "09e5121b-97b3-42e4-8025-f28f3470681b",
+        "outputId": "e6124155-cc4e-4928-b659-af9d77bfdc6e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5 occurs 3 times in the list\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to count the occurrences of an element in a list."
+        "# Write a Python program to count the occurrences of an element in a list.\n",
+        "list_num=[1,2,3,4,5,6,7,8,9,10,6,3,5,7,8,1,7,2,5,2,4]\n",
+        "print(\"5 occurs\",list_num.count(5),\"times in the list\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "id": "b774b741-e9a6-45db-8f00-e6d9b734d03a",
       "metadata": {
-        "id": "b774b741-e9a6-45db-8f00-e6d9b734d03a"
+        "id": "b774b741-e9a6-45db-8f00-e6d9b734d03a",
+        "outputId": "0e5b9bfe-e9e1-4384-ec10-aa07d1b5853a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "4\n",
+            "6\n",
+            "8\n",
+            "10\n",
+            "6\n",
+            "8\n",
+            "2\n",
+            "2\n",
+            "4\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to get the number of even numbers in a list."
+        "# Write a Python program to get the number of even numbers in a list.\n",
+        "list_num=[1,2,3,4,5,6,7,8,9,10,6,3,5,7,8,1,7,2,5,2,4]\n",
+        "for i in list_num:\n",
+        "  if i%2==0:\n",
+        "    print(i)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96",
       "metadata": {
-        "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96"
+        "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96",
+        "outputId": "4bbe0e8d-b9c2-4176-b22d-5e717b85e624",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 6, 3, 5, 7, 8, 1, 7, 2, 5, 2)\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a tuple and print it."
+        "# Write a Python program to create a tuple and print it.\n",
+        "tuple_num=(1,2,3,4,5,6,7,8,9,10,6,3,5,7,8,1,7,2,5,2)\n",
+        "print(tuple_num)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "id": "5c04f880-6e96-4ef4-9f4b-df21aae76ff1",
       "metadata": {
-        "id": "5c04f880-6e96-4ef4-9f4b-df21aae76ff1"
+        "id": "5c04f880-6e96-4ef4-9f4b-df21aae76ff1",
+        "outputId": "5a5178a1-a821-4e46-803e-c9a583c6c6dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 6, 3, 5, 7, 8, 1, 7, 2, 5, 2] Tuple Converted to list\n",
+            "(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 6, 3, 5, 7, 8, 1, 7, 2, 5, 2) List converted to Tuple\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to convert a tuple to a list and vice versa."
+        "# Write a Python program to convert a tuple to a list and vice versa.\n",
+        "tuple_num=(1,2,3,4,5,6,7,8,9,10,6,3,5,7,8,1,7,2,5,2)\n",
+        "list_convert=list(tuple_num)\n",
+        "print(list_convert,\"Tuple Converted to list\")\n",
+        "tuple_num=tuple(list_convert)\n",
+        "print(tuple_num,\"List converted to Tuple\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "d5192acc-27f3-456e-9c72-3b276a587bf5",
       "metadata": {
-        "id": "d5192acc-27f3-456e-9c72-3b276a587bf5"
+        "id": "d5192acc-27f3-456e-9c72-3b276a587bf5",
+        "outputId": "a96042a8-d90f-42c0-ef97-32397e503574",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Maximum in given tuple: 10\n",
+            "Minimum in given tuple: 1\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find the maximum and minimum values in a tuple."
+        "# Write a Python program to find the maximum and minimum values in a tuple.\n",
+        "tuple_num=(1,2,3,4,5,6,7,8,9,10,6,3,5,7,8,1,7,2,5,2)\n",
+        "print(\"Maximum in given tuple:\",max(tuple_num))\n",
+        "print(\"Minimum in given tuple:\",min(tuple_num))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "43f0a340-9407-4302-af7e-4e63db578bbf",
       "metadata": {
-        "id": "43f0a340-9407-4302-af7e-4e63db578bbf"
+        "id": "43f0a340-9407-4302-af7e-4e63db578bbf",
+        "outputId": "c8f31152-1b28-4806-b7cd-99bff2e1748c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "Student\n",
+            "20\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to unpack a tuple into variables."
+        "# Write a Python program to unpack a tuple into variables.\n",
+        "tuple_data=(10,\"Student\",20)\n",
+        "standard, occupation, id=tuple_data\n",
+        "print(standard)\n",
+        "print(occupation)\n",
+        "print(20)"
       ]
     },
     {
@@ -1102,7 +1348,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to add an element to a set and check if an element exists in the set."
+        "# Write a Python program to add an element to a set and check if an element exists in the set.\n"
       ]
     },
     {
