--- a/Assignments/Assignment_01.ipynb
+++ b/Assignments/Assignment_01.ipynb
@@ -1341,7 +1341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "46e96e29-2157-4b9f-bb24-0bd973eada9f",
       "metadata": {
         "id": "46e96e29-2157-4b9f-bb24-0bd973eada9f",
@@ -1370,7 +1370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "d81a803b-fd80-403e-9ae3-680ef44a3d86",
       "metadata": {
         "id": "d81a803b-fd80-403e-9ae3-680ef44a3d86",
@@ -1401,7 +1401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "7432174b-fe75-4371-b23a-e2c5d62edb15",
       "metadata": {
         "id": "7432174b-fe75-4371-b23a-e2c5d62edb15",
@@ -1454,7 +1454,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "c4b1a942-818e-42c1-b742-1fabe80fca6d",
       "metadata": {
         "id": "c4b1a942-818e-42c1-b742-1fabe80fca6d",
@@ -1488,7 +1488,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "a78f1070-3ff3-436a-8391-153f019f53cd",
       "metadata": {
         "id": "a78f1070-3ff3-436a-8391-153f019f53cd",
@@ -1520,7 +1520,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "fcba0267-8cc4-4e89-9e78-2d820916c177",
       "metadata": {
         "id": "fcba0267-8cc4-4e89-9e78-2d820916c177",
@@ -1551,7 +1551,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "d4c5fd77-9656-43e5-8fe2-be7dca23eb6d",
       "metadata": {
         "id": "d4c5fd77-9656-43e5-8fe2-be7dca23eb6d",
@@ -1614,7 +1614,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "91d90a4a-7329-45db-893b-caed8450ba96",
       "metadata": {
         "id": "91d90a4a-7329-45db-893b-caed8450ba96",
@@ -1649,7 +1649,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "dec2f9a5-90c5-478b-890b-0a506ecf45d3",
       "metadata": {
         "id": "dec2f9a5-90c5-478b-890b-0a506ecf45d3",
@@ -1688,7 +1688,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "56337441-68c3-45df-8733-a34cde0533a5",
       "metadata": {
         "id": "56337441-68c3-45df-8733-a34cde0533a5",
@@ -1723,7 +1723,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "84a2d010-e7b2-409b-b1f4-99bf806bb77a",
       "metadata": {
         "id": "84a2d010-e7b2-409b-b1f4-99bf806bb77a",
@@ -1760,7 +1760,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "ec44911e-7820-46cc-96a3-4ca443888837",
       "metadata": {
         "id": "ec44911e-7820-46cc-96a3-4ca443888837",
@@ -1797,7 +1797,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "fb4c08e1-34f3-487a-a1c6-77cd60fb4836",
       "metadata": {
         "id": "fb4c08e1-34f3-487a-a1c6-77cd60fb4836",
@@ -1835,7 +1835,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "f4ffc7a8-f579-461c-b507-4085a0477283",
       "metadata": {
         "id": "f4ffc7a8-f579-461c-b507-4085a0477283",
@@ -1866,62 +1866,180 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "0b00c4af-89e0-43e8-a991-1b684d2ce33f",
       "metadata": {
-        "id": "0b00c4af-89e0-43e8-a991-1b684d2ce33f"
+        "id": "0b00c4af-89e0-43e8-a991-1b684d2ce33f",
+        "outputId": "9bc3cbcd-26b1-4283-d854-23bb51f4ef21",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the list:4 7 8 9 6 \n",
+            "12096\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function that accepts a list of numbers and returns their product."
+        "# Write a Python function that accepts a list of numbers and returns their product.\n",
+        "def product(list_num):\n",
+        "  product=1\n",
+        "  for i in list_num:\n",
+        "    product*=i\n",
+        "  return product\n",
+        "\n",
+        "def main():\n",
+        "  str=input(\"Enter the list:\")\n",
+        "  list_num=str.split()\n",
+        "  list_num=[int(i) for i in list_num]\n",
+        "  print(product(list_num))\n",
+        "\n",
+        "main()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "9cd11703-5b48-44fe-af4e-ea906a2762c9",
       "metadata": {
-        "id": "9cd11703-5b48-44fe-af4e-ea906a2762c9"
+        "id": "9cd11703-5b48-44fe-af4e-ea906a2762c9",
+        "outputId": "b6ff4e7d-cd14-44ed-9d9b-6db0e53427fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number:5\n",
+            "The number is odd\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function to check if a number is even or odd using the modulo operator."
+        "# Write a Python function to check if a number is even or odd using the modulo operator.\n",
+        "def even_odd(n):\n",
+        "  if n%2==0:\n",
+        "    print(\"The number is even\")\n",
+        "  else:\n",
+        "    print(\"The number is odd\")\n",
+        "\n",
+        "def main():\n",
+        "  n=int(input(\"Enter the number:\"))\n",
+        "  even_odd(n)\n",
+        "\n",
+        "main()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "afbf262e-daed-40a9-827f-82fa60979610",
       "metadata": {
-        "id": "afbf262e-daed-40a9-827f-82fa60979610"
+        "id": "afbf262e-daed-40a9-827f-82fa60979610",
+        "outputId": "64c0ecec-c9be-4c4b-c05a-77b9a3dc44e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a list of squares of numbers from 1 to 10 using list comprehension."
+        "# Write a Python program to create a list of squares of numbers from 1 to 10 using list comprehension.\n",
+        "def square(n):\n",
+        "  return n*n\n",
+        "\n",
+        "def main():\n",
+        "  list_num=[1,2,3,4,5,6,7,8,9,10]\n",
+        "  list_square=[square(i) for i in list_num]\n",
+        "  print(list_square)\n",
+        "\n",
+        "main()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "7fff76d8-9ba8-4006-9be6-6f7350092d1c",
       "metadata": {
-        "id": "7fff76d8-9ba8-4006-9be6-6f7350092d1c"
+        "id": "7fff76d8-9ba8-4006-9be6-6f7350092d1c",
+        "outputId": "3bb7cbc6-d5ad-47ad-9325-56106ae5dac4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the list:4 5 8 7 9\n",
+            "[4, 8]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to filter out all even numbers from a list using list comprehension."
+        "# Write a Python program to filter out all even numbers from a list using list comprehension.\n",
+        "def main():\n",
+        "  str=input(\"Enter the list:\")\n",
+        "  list_num=str.split()\n",
+        "  list_num=[int(i) for i in list_num]\n",
+        "  list_even=[i for i in list_num if i%2==0]\n",
+        "  print(list_even)\n",
+        "\n",
+        "main()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "6ae9b8df-38f9-4fd7-bad1-aa7b07cc9271",
       "metadata": {
-        "id": "6ae9b8df-38f9-4fd7-bad1-aa7b07cc9271"
+        "id": "6ae9b8df-38f9-4fd7-bad1-aa7b07cc9271",
+        "outputId": "ba07abd2-5176-4a39-cb7f-20f32b400dde",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the string:to press someone's throat very tightly so that they cannot breathe\n",
+            "['press', \"someone's\", 'throat', 'tightly', 'cannot', 'breathe']\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a list of strings that are longer than 4 characters from a given list of words using list comprehension."
+        "# Write a Python program to create a list of strings that are longer than 4 characters from a given list of words using list comprehension.\n",
+        "def length(list_words):\n",
+        "  list_new=[]\n",
+        "  for i in list_words:\n",
+        "    if len(i)>4:\n",
+        "      list_new.append(i)\n",
+        "  return list_new\n",
+        "\n",
+        "def main():\n",
+        "  str=input(\"Enter the string:\")\n",
+        "  list_words=str.split()\n",
+        "  print(length(list_words))\n",
+        "\n",
+        "main()"
       ]
     },
     {
@@ -2060,7 +2178,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
