--- a/Assignments/Assignment_01.ipynb
+++ b/Assignments/Assignment_01.ipynb
@@ -1870,10 +1870,10 @@
       "id": "0b00c4af-89e0-43e8-a991-1b684d2ce33f",
       "metadata": {
         "id": "0b00c4af-89e0-43e8-a991-1b684d2ce33f",
-        "outputId": "9bc3cbcd-26b1-4283-d854-23bb51f4ef21",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9bc3cbcd-26b1-4283-d854-23bb51f4ef21"
       },
       "outputs": [
         {
@@ -1908,10 +1908,10 @@
       "id": "9cd11703-5b48-44fe-af4e-ea906a2762c9",
       "metadata": {
         "id": "9cd11703-5b48-44fe-af4e-ea906a2762c9",
-        "outputId": "b6ff4e7d-cd14-44ed-9d9b-6db0e53427fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b6ff4e7d-cd14-44ed-9d9b-6db0e53427fc"
       },
       "outputs": [
         {
@@ -1944,10 +1944,10 @@
       "id": "afbf262e-daed-40a9-827f-82fa60979610",
       "metadata": {
         "id": "afbf262e-daed-40a9-827f-82fa60979610",
-        "outputId": "64c0ecec-c9be-4c4b-c05a-77b9a3dc44e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "64c0ecec-c9be-4c4b-c05a-77b9a3dc44e1"
       },
       "outputs": [
         {
@@ -1977,10 +1977,10 @@
       "id": "7fff76d8-9ba8-4006-9be6-6f7350092d1c",
       "metadata": {
         "id": "7fff76d8-9ba8-4006-9be6-6f7350092d1c",
-        "outputId": "3bb7cbc6-d5ad-47ad-9325-56106ae5dac4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3bb7cbc6-d5ad-47ad-9325-56106ae5dac4"
       },
       "outputs": [
         {
@@ -2010,10 +2010,10 @@
       "id": "6ae9b8df-38f9-4fd7-bad1-aa7b07cc9271",
       "metadata": {
         "id": "6ae9b8df-38f9-4fd7-bad1-aa7b07cc9271",
-        "outputId": "ba07abd2-5176-4a39-cb7f-20f32b400dde",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ba07abd2-5176-4a39-cb7f-20f32b400dde"
       },
       "outputs": [
         {
@@ -2044,14 +2044,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "f492c7d4-6ad3-48ab-9b61-232be02aecee",
       "metadata": {
-        "id": "f492c7d4-6ad3-48ab-9b61-232be02aecee"
+        "id": "f492c7d4-6ad3-48ab-9b61-232be02aecee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a51c7935-4118-4d0b-fb61-4328631a7c84"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the string:THE king OF the JUNGLE is LION\n",
+            "['THE', 'OF', 'JUNGLE', 'LION']\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a list of all uppercase letters in a string using list comprehension."
+        "# Write a Python program to create a list of all uppercase letters in a string using list comprehension.\n",
+        "def length(list_words):\n",
+        "  list_new=[]\n",
+        "  for i in list_words:\n",
+        "    if i.isupper():\n",
+        "      list_new.append(i)\n",
+        "  return list_new\n",
+        "\n",
+        "def main():\n",
+        "  str=input(\"Enter the string:\")\n",
+        "  list_words=str.split()\n",
+        "  print(length(list_words))\n",
+        "\n",
+        "main()"
       ]
     },
     {
@@ -2063,7 +2089,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to generate the first n Fibonacci numbers using list comprehension."
+        "# Write a Python program to generate the first n Fibonacci numbers using list comprehension.\n"
       ]
     },
     {
