--- a/Assignments/Assignment_01.ipynb
+++ b/Assignments/Assignment_01.ipynb
@@ -2082,50 +2082,139 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "929a7f74-1762-4a2a-be23-bacf67ff4d8b",
       "metadata": {
-        "id": "929a7f74-1762-4a2a-be23-bacf67ff4d8b"
+        "id": "929a7f74-1762-4a2a-be23-bacf67ff4d8b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "532b0fa6-68d9-49a3-a6df-0f56662a5d8d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number of terms:5\n",
+            "[0, 1, 1, 2, 3]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to generate the first n Fibonacci numbers using list comprehension.\n"
+        "# Write a Python program to generate the first n Fibonacci numbers using list comprehension.\n",
+        "def fibonacci(a,b,n):\n",
+        "  if n==0:\n",
+        "    return []\n",
+        "  elif n==1:\n",
+        "    return [a]\n",
+        "  else:\n",
+        "    return [a]+fibonacci(b,a+b,n-1)\n",
+        "\n",
+        "def main():\n",
+        "  a=0\n",
+        "  b=1\n",
+        "  n=int(input(\"Enter the number of terms:\"))\n",
+        "  print(fibonacci(a,b,n))\n",
+        "\n",
+        "main()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "47188bbc-cf62-47bb-a14e-0582c8b5cdd9",
       "metadata": {
-        "id": "47188bbc-cf62-47bb-a14e-0582c8b5cdd9"
+        "id": "47188bbc-cf62-47bb-a14e-0582c8b5cdd9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fdd79ac3-af46-406c-c875-cf527be7b85e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81, 10: 100}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a dictionary where keys are numbers and values are their squares using dictionary comprehension."
+        "# Write a Python program to create a dictionary where keys are numbers and values are their squares using dictionary comprehension.\n",
+        "def square(n):\n",
+        "  return n*n\n",
+        "\n",
+        "def main():\n",
+        "  list_num=[1,2,3,4,5,6,7,8,9,10]\n",
+        "  dict_square={i:square(i) for i in list_num}\n",
+        "  print(dict_square)\n",
+        "\n",
+        "main()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "3c4637d3-aa85-4b4c-acf3-953c10818bcb",
       "metadata": {
-        "id": "3c4637d3-aa85-4b4c-acf3-953c10818bcb"
+        "id": "3c4637d3-aa85-4b4c-acf3-953c10818bcb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e2da9245-324a-4673-fae0-725795bac2ae"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1: 'a', 2: 'b', 3: 'c', 4: 'd', 5: 'e'}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a dictionary from two lists (one for keys and one for values) using dictionary comprehension."
+        "# Write a Python program to create a dictionary from two lists (one for keys and one for values) using dictionary comprehension.\n",
+        "def main():\n",
+        "  keys=[1,2,3,4,5]\n",
+        "  values=['a','b','c','d','e']\n",
+        "  dict_new={keys[i]:values[i] for i in range(len(keys))}\n",
+        "  print(dict_new)\n",
+        "\n",
+        "main()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "de817d6f-96e7-4346-839e-1ef0df539b6b",
       "metadata": {
-        "id": "de817d6f-96e7-4346-839e-1ef0df539b6b"
+        "id": "de817d6f-96e7-4346-839e-1ef0df539b6b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2e785926-c40d-43e7-8fdb-5da9af655139"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a dictionary of numbers from 1 to 5 and their cubes using dictionary comprehension."
+        "# Write a Python program to create a dictionary of numbers from 1 to 5 and their cubes using dictionary comprehension.\n",
+        "def cube(n):\n",
+        "  return n*n*n\n",
+        "\n",
+        "def main():\n",
+        "  list_num=[1,2,3,4,5]\n",
+        "  dict_square={i:square(i) for i in list_num}\n",
+        "  print(dict_square)\n",
+        "\n",
+        "main()"
       ]
     },
     {
@@ -2137,7 +2226,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to square each element of a list using the map() function."
+        "# Write a Python program to square each element of a list using the map() function.\n"
       ]
     },
     {
