--- a/Assignments/Assignment_01.ipynb
+++ b/Assignments/Assignment_01.ipynb
@@ -2219,62 +2219,177 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "33695301-057e-49a6-9f80-a2f4e3af60ed",
       "metadata": {
-        "id": "33695301-057e-49a6-9f80-a2f4e3af60ed"
+        "id": "33695301-057e-49a6-9f80-a2f4e3af60ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bf2b5ae9-bea1-4879-b8dd-b0c3002200df"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 9, 16, 25]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to square each element of a list using the map() function.\n"
+        "# Write a Python program to square each element of a list using the map() function.\n",
+        "def square(x):\n",
+        "  return x ** 2\n",
+        "\n",
+        "numbers = [1, 2, 3, 4, 5]\n",
+        "squared_numbers = list(map(square, numbers))\n",
+        "\n",
+        "print(squared_numbers)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "6d4d17f3-c40f-4944-8656-c6416b600361",
       "metadata": {
-        "id": "6d4d17f3-c40f-4944-8656-c6416b600361"
+        "id": "6d4d17f3-c40f-4944-8656-c6416b600361",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "39d037a9-3a71-4f3a-9713-a0b0c541f766"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the list:8 4 5 7 9 6 3\n",
+            "8\n",
+            "4\n",
+            "6\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to filter all even numbers from a list using the filter() function."
+        "# Write a Python program to filter all even numbers from a list using the filter() function.\n",
+        "def filter_even(n):\n",
+        "  if n%2==0:\n",
+        "    return True\n",
+        "  else:\n",
+        "    return False\n",
+        "\n",
+        "def main():\n",
+        "  str=input(\"Enter the list:\")\n",
+        "  str=str.split()\n",
+        "  list_int=[int(i) for i in str]\n",
+        "  Even=filter(filter_even,list_int)\n",
+        "  for x in Even:\n",
+        "    print(x)\n",
+        "\n",
+        "main()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "id": "6634ba1f-9f81-475e-b7c4-422d102afb75",
       "metadata": {
-        "id": "6634ba1f-9f81-475e-b7c4-422d102afb75"
+        "id": "6634ba1f-9f81-475e-b7c4-422d102afb75",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2e3a9225-426b-4404-9d72-83d5781a362a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 15\n",
+            "15 is divisible by both 3 and 5.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to use a lambda function to check if a number is divisible by both 3 and 5."
+        "# Write a Python program to use a lambda function to check if a number is divisible by both 3 and 5.\n",
+        "divisible_by_3_and_5 = lambda x: x % 3 == 0 and x % 5 == 0\n",
+        "\n",
+        "number = int(input(\"Enter a number: \"))\n",
+        "\n",
+        "if divisible_by_3_and_5(number):\n",
+        "    print(number, \"is divisible by both 3 and 5.\")\n",
+        "else:\n",
+        "    print(number, \"is not divisible by both 3 and 5.\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "0aac8430-5d77-439d-9a99-9598fadf989c",
       "metadata": {
-        "id": "0aac8430-5d77-439d-9a99-9598fadf989c"
+        "id": "0aac8430-5d77-439d-9a99-9598fadf989c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "195ca5f1-bf34-4b2e-ff19-280bac8d5bbc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 6, 8, 10]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to multiply all numbers in a list by 2 using a lambda function inside map()."
+        "# Write a Python program to multiply all numbers in a list by 2 using a lambda function inside map().\n",
+        "numbers = [1, 2, 3, 4, 5]\n",
+        "\n",
+        "doubled_numbers = list(map(lambda x: x * 2, numbers))\n",
+        "\n",
+        "print(doubled_numbers)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "e4cd5ba8-c6ec-4f0d-8787-bf0a4b7a2e22",
       "metadata": {
-        "id": "e4cd5ba8-c6ec-4f0d-8787-bf0a4b7a2e22"
+        "id": "e4cd5ba8-c6ec-4f0d-8787-bf0a4b7a2e22",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "32617e05-feac-4759-c9a6-1cacd325bc11"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the list:4 5 8 7 9 3 2 5 6 9\n",
+            "Enter the element to be removed:9\n",
+            "[4, 5, 8, 7, 3, 2, 5, 6]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to remove all occurrences of a specific element from a list."
+        "# Write a Python program to remove all occurrences of a specific element from a list.\n",
+        "def remove_ele(n,a):\n",
+        "  for i in n:\n",
+        "    if i==a:\n",
+        "      n.remove(i)\n",
+        "  return n\n",
+        "\n",
+        "def main():\n",
+        "  str=input(\"Enter the list:\")\n",
+        "  str=str.split()\n",
+        "  list_int=[int(i) for i in str]\n",
+        "  a=int(input(\"Enter the element to be removed:\"))\n",
+        "  print(remove_ele(list_int,a))\n",
+        "\n",
+        "main()"
       ]
     },
     {
