--- a/Assignments/Assignment_02.ipynb
+++ b/Assignments/Assignment_02.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/varsha-69/V/blob/main/Assignments/100_Numpy_exercises.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/varsha-69/V/blob/main/Assignments/Assignment_02.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -73,13 +73,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "f52e6a0b",
       "metadata": {
         "id": "f52e6a0b"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -93,13 +95,109 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "b7fa5fa1",
       "metadata": {
-        "id": "b7fa5fa1"
+        "id": "b7fa5fa1",
+        "outputId": "b7d8b652-5e99-4b03-ae0e-41a0881a7a98",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.26.4\n",
+            "Build Dependencies:\n",
+            "  blas:\n",
+            "    detection method: pkgconfig\n",
+            "    found: true\n",
+            "    include directory: /usr/local/include\n",
+            "    lib directory: /usr/local/lib\n",
+            "    name: openblas64\n",
+            "    openblas configuration: USE_64BITINT=1 DYNAMIC_ARCH=1 DYNAMIC_OLDER= NO_CBLAS=\n",
+            "      NO_LAPACK= NO_LAPACKE= NO_AFFINITY=1 USE_OPENMP= HASWELL MAX_THREADS=2\n",
+            "    pc file directory: /usr/local/lib/pkgconfig\n",
+            "    version: 0.3.23.dev\n",
+            "  lapack:\n",
+            "    detection method: internal\n",
+            "    found: true\n",
+            "    include directory: unknown\n",
+            "    lib directory: unknown\n",
+            "    name: dep139863411681952\n",
+            "    openblas configuration: unknown\n",
+            "    pc file directory: unknown\n",
+            "    version: 1.26.4\n",
+            "Compilers:\n",
+            "  c:\n",
+            "    args: -fno-strict-aliasing\n",
+            "    commands: cc\n",
+            "    linker: ld.bfd\n",
+            "    linker args: -Wl,--strip-debug, -fno-strict-aliasing\n",
+            "    name: gcc\n",
+            "    version: 10.2.1\n",
+            "  c++:\n",
+            "    commands: c++\n",
+            "    linker: ld.bfd\n",
+            "    linker args: -Wl,--strip-debug\n",
+            "    name: gcc\n",
+            "    version: 10.2.1\n",
+            "  cython:\n",
+            "    commands: cython\n",
+            "    linker: cython\n",
+            "    name: cython\n",
+            "    version: 3.0.8\n",
+            "Machine Information:\n",
+            "  build:\n",
+            "    cpu: x86_64\n",
+            "    endian: little\n",
+            "    family: x86_64\n",
+            "    system: linux\n",
+            "  host:\n",
+            "    cpu: x86_64\n",
+            "    endian: little\n",
+            "    family: x86_64\n",
+            "    system: linux\n",
+            "Python Information:\n",
+            "  path: /opt/python/cp310-cp310/bin/python\n",
+            "  version: '3.10'\n",
+            "SIMD Extensions:\n",
+            "  baseline:\n",
+            "  - SSE\n",
+            "  - SSE2\n",
+            "  - SSE3\n",
+            "  found:\n",
+            "  - SSSE3\n",
+            "  - SSE41\n",
+            "  - POPCNT\n",
+            "  - SSE42\n",
+            "  - AVX\n",
+            "  - F16C\n",
+            "  - FMA3\n",
+            "  - AVX2\n",
+            "  not found:\n",
+            "  - AVX512F\n",
+            "  - AVX512CD\n",
+            "  - AVX512_KNL\n",
+            "  - AVX512_KNM\n",
+            "  - AVX512_SKX\n",
+            "  - AVX512_CLX\n",
+            "  - AVX512_CNL\n",
+            "  - AVX512_ICL\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "# prompt:  Print the numpy version and the configuration\n",
+        "\n",
+        "import numpy as np\n",
+        "\n",
+        "print(np.__version__)\n",
+        "np.show_config()"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -113,13 +211,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "083c5c46",
       "metadata": {
-        "id": "083c5c46"
+        "id": "083c5c46",
+        "outputId": "309bed29-54fc-4521-d867-d34792f7ca81",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "Z = np.zeros(10)\n",
+        "Z"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -133,13 +250,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "02b04021",
       "metadata": {
-        "id": "02b04021"
+        "id": "02b04021",
+        "outputId": "bd731996-b115-4c10-c349-3391c6d984cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "80"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ],
+      "source": [
+        "Z.size * Z.itemsize"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -153,13 +287,85 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "40e6b70d",
       "metadata": {
-        "id": "40e6b70d"
+        "id": "40e6b70d",
+        "outputId": "ef8c7486-6bec-4be6-d324-1ba271cc6fc1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Help on ufunc:\n",
+            "\n",
+            "a\bad\bdd\bd = <ufunc 'add'>\n",
+            "    add(x1, x2, /, out=None, *, where=True, casting='same_kind', order='K', dtype=None, subok=True[, signature, extobj])\n",
+            "    \n",
+            "    Add arguments element-wise.\n",
+            "    \n",
+            "    Parameters\n",
+            "    ----------\n",
+            "    x1, x2 : array_like\n",
+            "        The arrays to be added.\n",
+            "        If ``x1.shape != x2.shape``, they must be broadcastable to a common\n",
+            "        shape (which becomes the shape of the output).\n",
+            "    out : ndarray, None, or tuple of ndarray and None, optional\n",
+            "        A location into which the result is stored. If provided, it must have\n",
+            "        a shape that the inputs broadcast to. If not provided or None,\n",
+            "        a freshly-allocated array is returned. A tuple (possible only as a\n",
+            "        keyword argument) must have length equal to the number of outputs.\n",
+            "    where : array_like, optional\n",
+            "        This condition is broadcast over the input. At locations where the\n",
+            "        condition is True, the `out` array will be set to the ufunc result.\n",
+            "        Elsewhere, the `out` array will retain its original value.\n",
+            "        Note that if an uninitialized `out` array is created via the default\n",
+            "        ``out=None``, locations within it where the condition is False will\n",
+            "        remain uninitialized.\n",
+            "    **kwargs\n",
+            "        For other keyword-only arguments, see the\n",
+            "        :ref:`ufunc docs <ufuncs.kwargs>`.\n",
+            "    \n",
+            "    Returns\n",
+            "    -------\n",
+            "    add : ndarray or scalar\n",
+            "        The sum of `x1` and `x2`, element-wise.\n",
+            "        This is a scalar if both `x1` and `x2` are scalars.\n",
+            "    \n",
+            "    Notes\n",
+            "    -----\n",
+            "    Equivalent to `x1` + `x2` in terms of array broadcasting.\n",
+            "    \n",
+            "    Examples\n",
+            "    --------\n",
+            "    >>> np.add(1.0, 4.0)\n",
+            "    5.0\n",
+            "    >>> x1 = np.arange(9.0).reshape((3, 3))\n",
+            "    >>> x2 = np.arange(3.0)\n",
+            "    >>> np.add(x1, x2)\n",
+            "    array([[  0.,   2.,   4.],\n",
+            "           [  3.,   5.,   7.],\n",
+            "           [  6.,   8.,  10.]])\n",
+            "    \n",
+            "    The ``+`` operator can be used as a shorthand for ``np.add`` on ndarrays.\n",
+            "    \n",
+            "    >>> x1 = np.arange(9.0).reshape((3, 3))\n",
+            "    >>> x2 = np.arange(3.0)\n",
+            "    >>> x1 + x2\n",
+            "    array([[ 0.,  2.,  4.],\n",
+            "           [ 3.,  5.,  7.],\n",
+            "           [ 6.,  8., 10.]])\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "!python -c \"import numpy; help(numpy.add)\""
+      ]
     },
     {
       "cell_type": "markdown",
@@ -173,13 +379,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "bcceacf7",
       "metadata": {
-        "id": "bcceacf7"
+        "id": "bcceacf7",
+        "outputId": "9cd4b93c-d3ae-4c65-e2fc-c128f223377f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0., 0., 0., 0., 1., 0., 0., 0., 0., 0.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ],
+      "source": [
+        "Z = np.zeros(10)\n",
+        "Z[4] = 1\n",
+        "Z"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -193,13 +418,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "3d117d54",
       "metadata": {
-        "id": "3d117d54"
+        "id": "3d117d54",
+        "outputId": "8a113855-3ac1-485b-a37c-bd5d6efed2f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26,\n",
+              "       27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43,\n",
+              "       44, 45, 46, 47, 48, 49])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "Z = np.arange(10,50)\n",
+        "Z\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -213,13 +459,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "22d23470",
       "metadata": {
-        "id": "22d23470"
+        "id": "22d23470",
+        "outputId": "04e9c30c-e10a-45cf-a209-d25623bdc848",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([49, 48, 47, 46, 45, 44, 43, 42, 41, 40, 39, 38, 37, 36, 35, 34, 33,\n",
+              "       32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16,\n",
+              "       15, 14, 13, 12, 11, 10])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ],
+      "source": [
+        "Z = np.arange(10,50)\n",
+        "Z = Z[::-1]\n",
+        "Z"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -233,13 +500,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "7449e82d",
       "metadata": {
-        "id": "7449e82d"
+        "id": "7449e82d",
+        "outputId": "0be52337-0dc0-455e-d5a1-fce103493580",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]\n",
+            " [6 7 8]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "Z=np.array([[0,1,2],[3,4,5],[6,7,8]])\n",
+        "print(Z)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2102,6 +2386,13 @@
     "colab": {
       "provenance": [],
       "include_colab_link": true
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
     }
   },
   "nbformat": 4,
